--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-windows:
-    runs-on: windows-2019
+    runs-on: windows-2022
     steps:
     - uses: actions/checkout@v2
       with:
@@ -22,13 +22,13 @@ jobs:
 
     - name: Generate build files (windows x64)
       working-directory: ${{runner.workspace}}/unity-xr-plugin
-      run: cmake -G "Visual Studio 16 2019" .
+      run: cmake -G "Visual Studio 17 2022" .
         
     - name: Build binaries (windows x64)
       working-directory: ${{runner.workspace}}/unity-xr-plugin
       run: cmake --build . --target ALL_BUILD --config Release
     
-    - name: Add modified binaries (x64)
+    - name: Add modified binaries (windows x64)
       working-directory: ${{runner.workspace}}/unity-xr-plugin
       run: |
         git add -u
@@ -39,7 +39,7 @@ jobs:
 
     - name: Generate build files (windows x86)
       working-directory: ${{runner.workspace}}/unity-xr-plugin
-      run: cmake -G "Visual Studio 16 2019" -A Win32 .
+      run: cmake -G "Visual Studio 17 2022" -A Win32 .
 
     - name: Build binaries (windows x86)
       working-directory: ${{runner.workspace}}/unity-xr-plugin
@@ -65,7 +65,6 @@ jobs:
         branch: ${{ github.ref }}
         
   build-linux:
-    needs: build-windows
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -85,7 +84,7 @@ jobs:
       working-directory: ${{runner.workspace}}/unity-xr-plugin
       run: make
     
-    - name: Add modified binaries (x64)
+    - name: Add modified binaries (linux)
       working-directory: ${{runner.workspace}}/unity-xr-plugin
       run: |
         set +e
